--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.dremio.plugin</groupId>
-  <version>3.2.4-201906051751050278-1bcce62</version>
-  <artifactId>dremio-sqlite-plugin</artifactId>
-  <name>Dremio SQLite Community Connector</name>
+  <version>4.1.8-202003120636020140-9c2a6b13</version>
+  <artifactId>dremio-teradata-plugin</artifactId>
+  <name>Dremio Teradata Community Connector</name>
 
   <properties>
-    <version.dremio>3.2.4-201906051751050278-1bcce62</version.dremio>
+    <version.dremio>4.1.8-202003120636020140-9c2a6b13</version.dremio>
   </properties>
 
   <dependencies>
@@ -42,7 +42,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.0.0</version>
         <configuration>
           <configLocation>src/main/checkstyle/checkstyle-config.xml</configLocation>
           <suppressionsLocation>src/main/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
